fix: font modal unselected color not showing

--- a/components/groupedComponents/temp-shop/create/fontPicker/fontPicker.module.sass
+++ b/components/groupedComponents/temp-shop/create/fontPicker/fontPicker.module.sass
@@ -5,7 +5,7 @@
 // Global styles
 .fontContainerUnselected
   cursor: pointer
-  //color: $buttonTextDisabled
+  color: $buttonTextDisabled
   z-index: 10
 
 //.fontContainerSelected
